Bug 217211 - Removing calendar event result in sending cancelation mail to all attendees but the organiser who gets a decline message.
Summary: Removing calendar event result in sending cancelation mail to all attendees b...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-03 15:22 UTC by Jelmer
Modified: 2013-10-31 02:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jelmer 2009-12-03 15:22:52 UTC
Version:           3.5.9 (enterprise35 20090918.1030082) (using 3.5.10, Kubuntu (hardy) 4:3.5.10-0ubuntu1~hardy1.3)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.24-25-generic

Situation:

Alice sends an invitation for an event to Bob and Charlie
They both accept the invitation.

Then Charlie changes his plans and removes the appointment form his calendar, Kontact asks if he wishes to send an email to the organiser of the event, which he accepts.

Alice wil now get a decline message from Charlie
Bob will get a cancelation request from Charlie. If he clicks te big blue line in this message, the appointment is removed from his calendar.

Alice still thinks that Bob will attend the Meeting while Bob thinks it is canceled.

In this description there can be more people, the cancelation is sent to all but the organiser. charlie even sends the cancelation to himself.

The expected result is of course that Alice gets a decline message, but that no cancelation message is sent.
Comment 1 Sergio Martins 2013-10-31 01:57:50 UTC
Git commit 1a8fa1ac755ecd71991116ffffa3362d25126e85 by Sergio Martins.
Committed on 31/10/2013 at 01:36.
Pushed by smartins into branch 'KDE/4.11'.

Don't send CANCEL to attendees  when deleting an event we didn't organize.

When deleting something that's not ours, only a REPLY with
PartStat=Declined must be sent, and to the organizer only.

Due to a bug, CANCEL was being sent to everybody, as if we were
the organizer.

Unit-test will go in master.

Bug 318394 should be similar, but for modification instead of deletion.
Related: bug 306755, bug 318394
FIXED-IN: 4.11.3

M  +12   -7    akonadi/calendar/incidencechanger.cpp

http://commits.kde.org/kdepimlibs/1a8fa1ac755ecd71991116ffffa3362d25126e85
Comment 2 Sergio Martins 2013-10-31 02:02:50 UTC
Git commit 32b4e54e6b7a3ed90af0efbbabca84e191d12b86 by Sergio Martins.
Committed on 31/10/2013 at 02:00.
Pushed by smartins into branch 'master'.

Unit-test that we don't send two e-mails when deleting an event.

This tests the last commit, where a CANCEL and a REPLY were being
sent.
Related: bug 306755

M  +32   -7    akonadi/calendar/tests/itiphandlertest.cpp

http://commits.kde.org/kdepimlibs/32b4e54e6b7a3ed90af0efbbabca84e191d12b86